--- a/proyecto-final-movil/stylescontacto.css
+++ b/proyecto-final-movil/stylescontacto.css
@@ -2,14 +2,15 @@ html{
     box-sizing: border-box;
 }
 body{/*quitamos magenes del body*/
-  width: 320px;/*ancho máximo de la caja*/
+  width: 100%;/*ancho máximo de la caja*/
   margin: 0px;
 }
 /*Header*/
 .fixedHeader{
   position: fixed;
   top: 0;
-  left:0;
+  left: 0;
+  width: 100%;
   z-index: 1;
 }
 .header1{
@@ -27,14 +28,13 @@ h1{/*especificamos el color de la fuente, la fuente y el tamaño */
 }
 .flex-list{
   height: 45px;
-  width: 320px;
   background-color: rgba(58, 231, 202, 0.7);/*color de fondo*/
   list-style: none;/*eliminamos los estilos de la ul*/
   display: flex;/*modo flexbox*/
   margin:0;/*eliminamos el margen para que queden pegadas las dos cajas*/
   padding: 0;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   text-transform: uppercase;
 }
 .item{
@@ -52,6 +52,42 @@ h1{/*especificamos el color de la fuente, la fuente y el tamaño */
   font-family: 'Rubik', sans-serif;
   font-size: 16px;
 }
+/*Sub menu desplegable con los miembros del equipo*/
+.menu-sub ul ul{
+display:none;
+position:absolute;
+top:100%;
+left:45%;
+background-color:rgba(58, 231, 202);
+padding:0;
+list-style: none;
+}
+.menu-sub ul ul li {
+float:none;
+width:100%;
+list-style: none;
+color: white;
+background-color:rgba(58, 231, 202);
+}
+.menu-sub ul ul a {
+line-height:200%;
+padding:10px 15px;
+width: 100%;
+}
+.menu-sub ul li:hover > ul {
+display:block;
+}
+.menu-sub  ul ul a:link{
+ background-color:rgba(58, 231, 202, 0.7);
+   text-decoration: none;
+     color: #FFFFFF;
+}
+.menu-sub  ul ul a:visited{
+   background-color:rgba(58, 231, 202, 0.7);
+   text-decoration: none;
+     color: #FFFFFF;
+}
+/*fin menu desplegable*/
 /*Contenido principal*/
 .headerImage{
 height:300px;
@@ -59,7 +95,6 @@ background-image: url("4cats.jpg");
 background-size: cover;
 position: relative;
 }
-
 .titulo{
   color: #099D8D;
   font-style: 'Rubik', sans-serif;
