--- a/proyecto-final-movil/stylesindex.css
+++ b/proyecto-final-movil/stylesindex.css
@@ -2,7 +2,7 @@ html{
   box-sizing: border-box;
 }
 body{/*quitamos magenes del body*/
-  width: 320px;/*ancho máximo de la caja*/
+  width: 100%;/*ancho máximo de la caja*/
   margin: 0px;
 }
 /*Header*/
@@ -10,6 +10,7 @@ body{/*quitamos magenes del body*/
   position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
   z-index: 1;
 }
 .header1{
@@ -27,19 +28,17 @@ h1{/*especificamos el color de la fuente, la fuente y el tamaño */
 }
 .flex-list{
   height: 45px;/*le restamos el padding de item y el del flex-list*/
-  width: 320px;/*le restamos el padding de item y el del flex-list*/
   background-color: rgba(58, 231, 202, 0.7);/*color de fondo*/
   list-style: none;/*eliminamos los estilos de la ul*/
   display: flex;/*modo flexbox*/
   margin:0px;/*eliminamos el margen para que queden pegadas las dos cajas*/
   padding:0;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 .item{
   padding: 5px 5px 5px 5px;
   text-transform: uppercase;
-
 }
 .a-header:link{/*quitamos el subrayado del enlace y ponemos color de la fuente, la fuente y el tamaño*/
   text-decoration: none;
@@ -53,6 +52,42 @@ h1{/*especificamos el color de la fuente, la fuente y el tamaño */
   font-family: 'Rubik', sans-serif;
   font-size: 16px;
 }
+/*Sub menu desplegable con los miembros del equipo*/
+.menu-sub ul ul{
+ display:none;
+position:absolute;
+top:100%;
+left:45%;
+background-color:rgba(58, 231, 202);
+padding:0;
+list-style: none;
+}
+.menu-sub ul ul li {
+float:none;
+width:100%;
+list-style: none;
+color: white;
+background-color:rgba(58, 231, 202);
+}
+.menu-sub ul ul a {
+line-height:200%;
+padding:10px 15px;
+width: 100%;
+}
+.menu-sub ul li:hover > ul {
+display:block;
+}
+.menu-sub  ul ul a:link{
+ background-color:rgba(58, 231, 202, 0.7);
+   text-decoration: none;
+     color: #FFFFFF;
+}
+.menu-sub  ul ul a:visited{
+   background-color:rgba(58, 231, 202, 0.7);
+   text-decoration: none;
+     color: #FFFFFF;
+}
+/*fin menu desplegable*/
 /*Contenido principal*/
 .headerImage{
   height:421px;
@@ -161,7 +196,6 @@ h1{/*especificamos el color de la fuente, la fuente y el tamaño */
   color: #54585a;
 }
 .profile {
-  width: 200px;
   margin: 0 auto;
   text-align: center;
 }
@@ -185,7 +219,7 @@ h1{/*especificamos el color de la fuente, la fuente y el tamaño */
   padding: 0px 40px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   height: 40px;
 }
 .list-item-rrhh {
